--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@
     src: url('../fonts/myfont/Booklet Cordel.ttf') format('truetype');
 }
 
-a,a:hover {
+a,
+a:hover,
+a:focus,
+a:active {
 	text-decoration: none;
 }
 img{
@@ -82,4 +85,8 @@ body {
   color: #FFF;
   font-size: 40px;
   font-weight: 300;
+}
+
+.social_icon {
+  margin-right: 10px;
 }
