--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ img{
 body {
 	font-family: 'Open Sans', sans-serif;
   background: #FF5A5A;
+  overflow-x: hidden;
   transition: background-color 1s;
 }
 
@@ -62,8 +63,7 @@ body {
   margin-top: 10vh;
 }
 .sec1-hd,
-.sec2-hd,
-.sec3-hd {
+.sec2-hd {
 	color: white;
 	font-size: 50px;
 	font-weight: 300;
@@ -81,7 +81,8 @@ body {
   margin-left: 10px;
 }
 
-.sec3-hd {
+.sec3-hd,
+.sec4-hd{
 	color: black;
 	font-size: 30px;
 	font-weight: 300;
@@ -101,7 +102,8 @@ body {
   width: 100%;
 }
 
-.sec5-hd {
+.sec5-hd,
+.sec6-hd {
   color: #FFF;
   font-size: 40px;
   font-weight: 300;
@@ -110,3 +112,181 @@ body {
 .social_icon {
   margin-right: 30px;
 }
+
+/* Bot */
+#robot {
+  position: relative;
+  left: 15%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+  width: 350px;
+  margin: 150px auto;
+  margin-bottom: 0 !important;
+}
+
+#body_bot {
+  -webkit-animation: hover 1.1s ease-in-out 0s infinite alternate;
+          animation: hover 1.1s ease-in-out 0s infinite alternate;
+}
+
+#head {
+  -webkit-animation: hover 1.1s ease-in-out 0.05s infinite alternate;
+          animation: hover 1.1s ease-in-out 0.05s infinite alternate;
+}
+
+#arms {
+  -webkit-animation: hover 1.1s ease-in-out 0.1s infinite alternate;
+          animation: hover 1.1s ease-in-out 0.1s infinite alternate;
+}
+
+#left_arm {
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
+  -webkit-animation: arms_bounce_left 1.1s ease-in-out 0s infinite alternate;
+          animation: arms_bounce_left 1.1s ease-in-out 0s infinite alternate;
+}
+
+#right_arm {
+  -webkit-transform-origin: center left;
+          transform-origin: center left;
+  -webkit-animation: arms_bounce_right 1.1s ease-in-out 0s infinite alternate;
+          animation: arms_bounce_right 1.1s ease-in-out 0s infinite alternate;
+}
+
+#eyes ellipse {
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+  -webkit-animation: eyes_blink 2s ease-out 0s infinite alternate;
+          animation: eyes_blink 2s ease-out 0s infinite alternate;
+}
+
+#shadow {
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+  -webkit-animation: shadow 1.1s ease-in-out 0s infinite alternate;
+          animation: shadow 1.1s ease-in-out 0s infinite alternate;
+}
+
+@-webkit-keyframes hover {
+  0% {
+    -webkit-transform: translate3d(0, 80px, 0);
+            transform: translate3d(0, 80px, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0, 30px, 0);
+            transform: translate3d(0, 30px, 0);
+  }
+}
+
+@keyframes hover {
+  0% {
+    -webkit-transform: translate3d(0, 80px, 0);
+            transform: translate3d(0, 80px, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0, 30px, 0);
+            transform: translate3d(0, 30px, 0);
+  }
+}
+@-webkit-keyframes shadow {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0) scale(1.5, 1.2);
+            transform: translate3d(0, 0, 0) scale(1.5, 1.2);
+    opacity: 0.4;
+  }
+  100% {
+    -webkit-transform: translate3d(0, 0, 0) scale(1, 1);
+            transform: translate3d(0, 0, 0) scale(1, 1);
+    opacity: 0.2;
+  }
+}
+@keyframes shadow {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0) scale(1.5, 1.2);
+            transform: translate3d(0, 0, 0) scale(1.5, 1.2);
+    opacity: 0.4;
+  }
+  100% {
+    -webkit-transform: translate3d(0, 0, 0) scale(1, 1);
+            transform: translate3d(0, 0, 0) scale(1, 1);
+    opacity: 0.2;
+  }
+}
+@-webkit-keyframes arms_bounce_left {
+  0% {
+    -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
+            transform: translate3d(0, 80px, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate3d(0, 30px, 0) rotate(-10deg);
+            transform: translate3d(0, 30px, 0) rotate(-10deg);
+  }
+}
+@keyframes arms_bounce_left {
+  0% {
+    -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
+            transform: translate3d(0, 80px, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate3d(0, 30px, 0) rotate(-10deg);
+            transform: translate3d(0, 30px, 0) rotate(-10deg);
+  }
+}
+@-webkit-keyframes arms_bounce_right {
+  0% {
+    -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
+            transform: translate3d(0, 80px, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate3d(0, 30px, 0) rotate(10deg);
+            transform: translate3d(0, 30px, 0) rotate(10deg);
+  }
+}
+@keyframes arms_bounce_right {
+  0% {
+    -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
+            transform: translate3d(0, 80px, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate3d(0, 30px, 0) rotate(10deg);
+            transform: translate3d(0, 30px, 0) rotate(10deg);
+  }
+}
+@-webkit-keyframes eyes_blink {
+  0% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+  90% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+  95% {
+    -webkit-transform: scale(0.8, 0);
+            transform: scale(0.8, 0);
+  }
+  100% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+}
+@keyframes eyes_blink {
+  0% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+  90% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+  95% {
+    -webkit-transform: scale(0.8, 0);
+            transform: scale(0.8, 0);
+  }
+  100% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+}
+
+/* Bot End */
