--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,7 @@ body {
 }
 
 .foo {
-  width: 60px;
-  margin-top: -5px;
+  margin-top: -11px;
   margin-left: 10px;
 }
 
@@ -128,6 +127,10 @@ body {
   font-weight: 300;
 }
 
+.sec5-hd .fa-external-link {
+  font-size: 18px;
+}
+
 .social_icon {
   margin-right: 30px;
 }
@@ -149,166 +152,108 @@ body {
 
 #body_bot {
   -webkit-animation: hover 1.1s ease-in-out 0s infinite alternate;
-          animation: hover 1.1s ease-in-out 0s infinite alternate;
+  animation: hover 1.1s ease-in-out 0s infinite alternate;
 }
 
 #head {
   -webkit-animation: hover 1.1s ease-in-out 0.05s infinite alternate;
-          animation: hover 1.1s ease-in-out 0.05s infinite alternate;
+  animation: hover 1.1s ease-in-out 0.05s infinite alternate;
 }
 
 #arms {
   -webkit-animation: hover 1.1s ease-in-out 0.1s infinite alternate;
-          animation: hover 1.1s ease-in-out 0.1s infinite alternate;
+  animation: hover 1.1s ease-in-out 0.1s infinite alternate;
 }
 
 #left_arm {
   -webkit-transform-origin: center right;
-          transform-origin: center right;
+  transform-origin: center right;
   -webkit-animation: arms_bounce_left 1.1s ease-in-out 0s infinite alternate;
-          animation: arms_bounce_left 1.1s ease-in-out 0s infinite alternate;
+  animation: arms_bounce_left 1.1s ease-in-out 0s infinite alternate;
 }
 
 #right_arm {
   -webkit-transform-origin: center left;
-          transform-origin: center left;
+  transform-origin: center left;
   -webkit-animation: arms_bounce_right 1.1s ease-in-out 0s infinite alternate;
-          animation: arms_bounce_right 1.1s ease-in-out 0s infinite alternate;
+  animation: arms_bounce_right 1.1s ease-in-out 0s infinite alternate;
 }
 
 #eyes ellipse {
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
   -webkit-animation: eyes_blink 2s ease-out 0s infinite alternate;
-          animation: eyes_blink 2s ease-out 0s infinite alternate;
+  animation: eyes_blink 2s ease-out 0s infinite alternate;
 }
 
 #shadow {
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
   -webkit-animation: shadow 1.1s ease-in-out 0s infinite alternate;
-          animation: shadow 1.1s ease-in-out 0s infinite alternate;
+  animation: shadow 1.1s ease-in-out 0s infinite alternate;
 }
-
-@-webkit-keyframes hover {
-  0% {
-    -webkit-transform: translate3d(0, 80px, 0);
-            transform: translate3d(0, 80px, 0);
-  }
-  100% {
-    -webkit-transform: translate3d(0, 30px, 0);
-            transform: translate3d(0, 30px, 0);
-  }
-}
-
 @keyframes hover {
   0% {
     -webkit-transform: translate3d(0, 80px, 0);
-            transform: translate3d(0, 80px, 0);
+    transform: translate3d(0, 80px, 0);
   }
   100% {
     -webkit-transform: translate3d(0, 30px, 0);
-            transform: translate3d(0, 30px, 0);
-  }
-}
-@-webkit-keyframes shadow {
-  0% {
-    -webkit-transform: translate3d(0, 0, 0) scale(1.5, 1.2);
-            transform: translate3d(0, 0, 0) scale(1.5, 1.2);
-    opacity: 0.4;
-  }
-  100% {
-    -webkit-transform: translate3d(0, 0, 0) scale(1, 1);
-            transform: translate3d(0, 0, 0) scale(1, 1);
-    opacity: 0.2;
+    transform: translate3d(0, 30px, 0);
   }
 }
 @keyframes shadow {
   0% {
     -webkit-transform: translate3d(0, 0, 0) scale(1.5, 1.2);
-            transform: translate3d(0, 0, 0) scale(1.5, 1.2);
+    transform: translate3d(0, 0, 0) scale(1.5, 1.2);
     opacity: 0.4;
   }
   100% {
     -webkit-transform: translate3d(0, 0, 0) scale(1, 1);
-            transform: translate3d(0, 0, 0) scale(1, 1);
+    transform: translate3d(0, 0, 0) scale(1, 1);
     opacity: 0.2;
-  }
-}
-@-webkit-keyframes arms_bounce_left {
-  0% {
-    -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
-            transform: translate3d(0, 80px, 0) rotate(0deg);
-  }
-  100% {
-    -webkit-transform: translate3d(0, 30px, 0) rotate(-10deg);
-            transform: translate3d(0, 30px, 0) rotate(-10deg);
   }
 }
 @keyframes arms_bounce_left {
   0% {
     -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
-            transform: translate3d(0, 80px, 0) rotate(0deg);
+    transform: translate3d(0, 80px, 0) rotate(0deg);
   }
   100% {
     -webkit-transform: translate3d(0, 30px, 0) rotate(-10deg);
-            transform: translate3d(0, 30px, 0) rotate(-10deg);
-  }
-}
-@-webkit-keyframes arms_bounce_right {
-  0% {
-    -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
-            transform: translate3d(0, 80px, 0) rotate(0deg);
-  }
-  100% {
-    -webkit-transform: translate3d(0, 30px, 0) rotate(10deg);
-            transform: translate3d(0, 30px, 0) rotate(10deg);
+    transform: translate3d(0, 30px, 0) rotate(-10deg);
   }
 }
 @keyframes arms_bounce_right {
   0% {
     -webkit-transform: translate3d(0, 80px, 0) rotate(0deg);
-            transform: translate3d(0, 80px, 0) rotate(0deg);
+    transform: translate3d(0, 80px, 0) rotate(0deg);
   }
   100% {
     -webkit-transform: translate3d(0, 30px, 0) rotate(10deg);
-            transform: translate3d(0, 30px, 0) rotate(10deg);
-  }
-}
-@-webkit-keyframes eyes_blink {
-  0% {
-    -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
-  }
-  90% {
-    -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
-  }
-  95% {
-    -webkit-transform: scale(0.8, 0);
-            transform: scale(0.8, 0);
-  }
-  100% {
-    -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
+    transform: translate3d(0, 30px, 0) rotate(10deg);
   }
 }
 @keyframes eyes_blink {
   0% {
     -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
+    transform: scale(1, 1);
+    opacity: 1;
   }
   90% {
     -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
+    transform: scale(1, 1);
+    opacity: 1;
   }
   95% {
-    -webkit-transform: scale(0.8, 0);
-            transform: scale(0.8, 0);
+    -webkit-transform: scale(1, 0.8);
+    transform: scale(1, 0.8);
+    opacity: 0;
   }
   100% {
     -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
+    transform: scale(1, 1);
+    opacity: 1;
   }
 }
 
